--- a/client/src/components/chat/chat.css
+++ b/client/src/components/chat/chat.css
@@ -1,13 +1,3 @@
-body {
-    font-family: 'Nunito';
-}
-
-h2 {
-    font-size: 18px;
-    padding: 10px 20px;
-    color: #575ed8;
-}
-
 #output p {
     padding: 14px 0px;
     margin: 0 20px 0 0;
@@ -36,34 +26,11 @@ h2 {
 }
 
 #output strong {
-    color: #575ed8;
+    color: #1e3799;
 }
 
 label {
     box-sizing: border-box;
     display: block;
     padding: 10px 20px;
-}
-
-input {
-    padding: 10px 20px;
-    box-sizing: border-box;
-    background: #eee;
-    border: 0;
-    display: block;
-    width: 100%;
-    background: #fff;
-    border-bottom: 1px solid #eee;
-    font-family: Nunito;
-    font-size: 16px;
-}
-
-button {
-    background: #575ed8;
-    color: #fff;
-    font-size: 18px;
-    border: 0;
-    padding: 12px 0;
-    width: 100%;
-    border-radius: 0 0 2px 2px;
 }
