--- a/client/src/baseCSS/index.css
+++ b/client/src/baseCSS/index.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Baloo Bhai', cursive;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
