--- a/client/src/baseCSS/index.css
+++ b/client/src/baseCSS/index.css
@@ -19,30 +19,26 @@ body::before {
   width: 300%;
   height: 400%;
   background-image: url('../img/welcome_screen_pattern.png');
-  animation: bgAnim 360s infinite forwards;
+  animation: bgAnim 60s infinite reverse forwards;
   background-repeat: repeat;
 }
 
 @keyframes bgAnim {
-  0% {
-    transform: translate(0, 0)
-  }
+
 
   25% {
-    transform: translate(10%, 20%)
+    transform: translate(-10%, 20%)
   }
 
   50% {
-    transform: translate(20%, 10%)
+    transform: translate(0%, 10%)
   }
 
   75% {
-    transform: translate(-10%, -20%)
+    transform: translate(10%, -20%)
   }
 
-  100% {
-    transform: translate(0, 0)
-  }
+
 }
 
 code {
